# aviatrix-backbone-native

./: .checkov.yaml  .gitignore  .pre-commit-config.yaml  .trivyignore  AWS_IPSEC_IMPLEMENTATION_GUIDE.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Makefile  README.md  USE_CASES.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: release-please.yml  terraform-security.yml  terraform-validate.yml
docs/: AZURE_EXTERNAL_DEVICES_GUIDE.md  GCP_BGP_LAN_EXISTING_VPC_GUIDE.md  GCP_EXTERNAL_DEVICES_GUIDE.md  USE_CASES.md  architecture.md  best-practices-audit.md  external-lb-design.md  gcp-pan-external-lb.md  getting-started.md  upgrade-guide.md
examples/aws/: aws.tfvars.example  main.tf
examples/azure/: azure.tfvars.example  main.tf
examples/dcf/: dcf.tfvars.example
examples/gcp/: gcp.tfvars.example  main.tf
examples/peering/: peering.tfvars.example
examples/segmentation/: segmentation.tfvars.example
modules/control/aws/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
modules/control/azure/: .terraform.lock.hcl  README.md  main.tf  variables.tf
modules/control/dcf/: OUTPUTS_USAGE.md  README.md  data.tf  main.tf  outputs.tf  provider.tf  variables.tf
modules/control/gcp/: README.md  main.tf  outputs.tf  variables.tf  (+1 more)
modules/mgmt/: main.tf  output.tf  provider.tf
tests/: README.md  conftest.py
tests/test_aws/: conftest.py  outputs.tf  test_transit.py  transit.tf  variables.tf  versions.tf
tests/test_aws_gcp/: .gitignore  README.md  terraform.tfvars.example  test_solution.py
(+59 files in other folders)
