[project]
name = "bb"
version = "0.1.0"
description = "Infrastructure management tools"
requires-python = ">=3.10"
dependencies = [
    "paramiko>=4.0.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "paramiko>=4.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-hcl2>=4.0.0",
]
